# proyecto_final_ldp

./: .gitignore  Cargo.toml  README.md  build.rs  database.db
src/: clipboard.rs  clipboard_generic.rs  conexionbd.rs  controlador.rs  controlador_sql.rs  controller_sql.rs  crypto_base.rs  ejemplo_sql.rs  main.rs  manipular_info.rs  panel.rs  sql_playground.rs
src/controlador/: manipular_info.rs
src/controlador/manipular_info/: crypto_base.rs  generador_contra.rs  info_almacenada.rs
src/manipular_info/: crypto_base.rs  generador_contra.rs  info_almacenada.rs
