[package]
name = "proyecto_final_ldp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2="0.5.0"
aes-gcm-siv="0.11.1"
rand_chacha="0.3.1"
base64="0.21.2"
clipboard-win = "4.5.0"
chrono = "0.4.26"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
clipboard = "0.5.0"
sha256 = "1.1.3"
rand = "0.8.5"